--- a/front/src/app/client/client.component.html
+++ b/front/src/app/client/client.component.html
@@ -20,7 +20,7 @@
             <th>Phone</th>
             <th>DateAdd</th>
             <th>Edit</th>
-           <!-- <th>Delete</th>-->
+            <!-- <th>Delete</th>-->
         </tr>
     </ng-template>
     <ng-template pTemplate="body" let-clientes>
@@ -67,20 +67,20 @@
                     <input id="email" [(ngModel)]="email" formControlName="email" type="text">
                 </div>
             </div>
-            <div class="p-field p-grid" [hidden]="searchVisible">
+            <div class="p-field p-grid" [hidden]="saveVisible">
                 <label for="firstname" class="p-col-12 p-mb-2 p-md-2 p-mb-md-0">Date add</label>
                 <div class="p-col-12 p-md-10">
                     <input id="date" [(ngModel)]="dateAdd" formControlName="date" type="date">
                 </div>
             </div>
-            <div class="p-field p-grid" [hidden]="!searchVisible">
-                <label for="firstname" class="p-col-12 p-mb-2 p-md-2 p-mb-md-0">Date add</label>
+            <div class="p-field p-grid" [hidden]="searchVisible">
+                <label for="firstname" class="p-col-12 p-mb-2 p-md-2 p-mb-md-0">Date Start</label>
                 <div class="p-col-12 p-md-10">
                     <input id="date" [(ngModel)]="dateStart" formControlName="date" type="date">
                 </div>
             </div>
-            <div class="p-field p-grid" [hidden]="!searchVisible">
-                <label for="firstname" class="p-col-12 p-mb-2 p-md-2 p-mb-md-0">Date add</label>
+            <div class="p-field p-grid" [hidden]="searchVisible">
+                <label for="firstname" class="p-col-12 p-mb-2 p-md-2 p-mb-md-0">Date End</label>
                 <div class="p-col-12 p-md-10">
                     <input id="date" [(ngModel)]="dateEnd" formControlName="date" type="date">
                 </div>
@@ -88,9 +88,9 @@
         </div>
         <p-footer>
             <div class="container" style="margin: 5px;">
-                <button [disabled]="user.invalid" class="btn btn-success" (click)="saveClient()" [hidden]="editVisible || searchVisible " style="margin: 5px;">Save</button>
-                <button [hidden]="!searchVisible" class="btn btn-success" (click)="saveClient('edit')" [hidden]="!editVisible" style="margin: 5px;">Update</button>
-                <button [hidden]="searchVisible" class="btn btn-success" (click)="searchAdvanceServicio()" [hidden]="!editVisible && !searchVisible" style="margin: 5px;">Search</button>
+                <button [hidden]="saveVisible" [disabled]="user.invalid" class="btn btn-success" (click)="saveClient()" style="margin: 5px;">Save</button>
+                <button [hidden]="editVisible" class="btn btn-success" (click)="saveClient('edit')" style="margin: 5px;">Update</button>
+                <button [hidden]="searchVisible" class="btn btn-success" (click)="searchAdvanceServicio()" style="margin: 5px;">Search</button>
                 <button class="btn btn-danger" (click)="closeDialog()">Close</button>
             </div>
         </p-footer>
