Cambia identificadores en clientl.component.html

--- a/front/src/app/client/client.component.html
+++ b/front/src/app/client/client.component.html
@@ -76,13 +76,13 @@
             <div class="p-field p-grid" [hidden]="searchVisible">
                 <label for="firstname" class="p-col-12 p-mb-2 p-md-2 p-mb-md-0">Date Start</label>
                 <div class="p-col-12 p-md-10">
-                    <input id="date" [(ngModel)]="dateStart" formControlName="date" type="date">
+                    <input id="datestart" [(ngModel)]="dateStart" formControlName="date" type="date">
                 </div>
             </div>
             <div class="p-field p-grid" [hidden]="searchVisible">
                 <label for="firstname" class="p-col-12 p-mb-2 p-md-2 p-mb-md-0">Date End</label>
                 <div class="p-col-12 p-md-10">
-                    <input id="date" [(ngModel)]="dateEnd" formControlName="date" type="date">
+                    <input id="dateend" [(ngModel)]="dateEnd" formControlName="date" type="date">
                 </div>
             </div>
         </div>
