Ajuste realizado: se habilita botón de búsqueda filtro

--- a/front/src/app/client/client.component.html
+++ b/front/src/app/client/client.component.html
@@ -5,7 +5,7 @@
 <div class="container" class="col-md-6">
     <div class="input-group">
         <input type="search" [(ngModel)]="search" class="form-control rounded" placeholder="Enter Share Key" aria-label="Search" aria-describedby="search-addon" />
-        <button disabled="disabled" type="button" (click)="searchClient()" class="btn btn-outline-primary" name="search">Search</button> <button style="margin: 5px;" class="btn btn-primary" icon="pi pi-info-circle" label="Show" (click)="searchAdvance()">Search Advance</button>
+        <button type="button" (click)="searchClient()" class="btn btn-outline-primary" name="search">Search</button> <button style="margin: 5px;" class="btn btn-primary" icon="pi pi-info-circle" label="Show" (click)="searchAdvance()">Search Advance</button>
     </div>
 </div>
 <div class="col-md-12" style="margin: 5px;">
