--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Allianza</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <title>Allianz</title>
 </head>
 
 <body>
-    <div class="container" style="margin: 20px;">
+    <div class="container-fluid" style="margin: 20px;">
         <div class="row">
             <div class="col-md-1">
                 <h2>Alianza</h2>
