--- a/front/src/app/client/client.component.html
+++ b/front/src/app/client/client.component.html
@@ -1,40 +1,43 @@
-<div class="container" style="margin: auto;">
+<div class="container-fluid" style="margin: auto;">
     <button style="margin: 5px;" class="btn btn-primary" icon="pi pi-info-circle" label="Show" (click)="addClient()">New</button>
     <button style="margin: 5px;" class="btn btn-primary" icon="pi pi-info-circle" label="Show" (click)="tb.exportCSV()">Export</button>
 </div>
-<div class="container" class="col-md-6">
+<div class="container-fluid" class="col-xs-12 col-md-6">
     <div class="input-group">
         <input type="search" [(ngModel)]="search" class="form-control rounded" placeholder="Enter Share Key" aria-label="Search" aria-describedby="search-addon" />
         <button type="button" (click)="searchClient()" class="btn btn-outline-primary" name="search">Search</button> <button style="margin: 5px;" class="btn btn-primary" icon="pi pi-info-circle" label="Show" (click)="searchAdvance()">Search Advance</button>
     </div>
 </div>
-<div class="col-md-12" style="margin: 5px;">
+<div class="col-xs-12 col-md-12" style="margin: 5px;">
     <h5 class="text text-info">Clients</h5>
 </div>
-<p-table #tb [value]="clientes" exportFilename="listClients">
-    <ng-template pTemplate="header">
-        <tr>
-            <th>ShareKey</th>
-            <th>BusinessId</th>
-            <th>Email</th>
-            <th>Phone</th>
-            <th>DateAdd</th>
-            <th>Edit</th>
-            <!-- <th>Delete</th>-->
-        </tr>
-    </ng-template>
-    <ng-template pTemplate="body" let-clientes>
-        <tr>
-            <td style="width: 10%; overflow-wrap: break-word; ">{{clientes.shareKey}}</td>
-            <td style="width: 10%; overflow-wrap: break-word;">{{clientes.businessId}}</td>
-            <td style="width: 20%; overflow-wrap: break-word;">{{clientes.email}}</td>
-            <td style="width: 20%; overflow-wrap: break-word;">{{clientes.phone}}</td>
-            <td style="width: 20%; overflow-wrap: break-word;">{{clientes.dateAdd | date:'YYYY / MM / dd'}}</td>
-            <td><button class="btn btn-warning" (click)="loadForm(clientes.id)">Edit</button></td>
-            <!--<td><button class="btn btn-danger" (click)="confirm(clientes.id)">Delete</button></td>-->
-        </tr>
-    </ng-template>
-</p-table>
+<div class="col-xs-12 col-md-12">
+    <p-table #tb [value]="clientes" exportFilename="listClients">
+        <ng-template pTemplate="header">
+            <tr>
+                <th>ShareKey</th>
+                <th>BusinessId</th>
+                <th>Email</th>
+                <th>Phone</th>
+                <th>DateAdd</th>
+                <th>Edit</th>
+                <th>Delete</th>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-clientes>
+            <tr>
+                <td style="width: 10%; overflow-wrap: break-word; ">{{clientes.shareKey}}</td>
+                <td style="width: 10%; overflow-wrap: break-word;">{{clientes.businessId}}</td>
+                <td style="width: 20%; overflow-wrap: break-word;">{{clientes.email}}</td>
+                <td style="width: 20%; overflow-wrap: break-word;">{{clientes.phone}}</td>
+                <td style="width: 20%; overflow-wrap: break-word;">{{clientes.dateAdd | date:'YYYY / MM / dd'}}</td>
+                <td><button class="btn btn-warning" (click)="loadForm(clientes.id)">Edit</button></td>
+                <td><button class="btn btn-danger" (click)="confirm(clientes.id)">Delete</button></td>
+            </tr>
+        </ng-template>
+    </p-table>
+</div>
+
 
 <p-dialog [(visible)]="display" [style]="{width: '25vw'}">
     <ng-template pTemplate="header">
