--- a/front/src/app/client/client.component.html
+++ b/front/src/app/client/client.component.html
@@ -13,66 +13,60 @@
         <h5 class="text text-info">Clients</h5>
     </div>
 
-    <div class="card">
-        <p-table [value]="clientes" [paginator]="true" [rows]="10" [showCurrentPageReport]="false" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [rowsPerPageOptions]="[10,25,50]">
+    <!--<div class="card">
+        <h5>Programmatic Control</h5>
+        <div class="p-mb-3">
+            <p-button type="button" icon="pi pi-chevron-left" (click)="prev()" [disabled]="isFirstPage()" styleClass="p-button-text"></p-button>
+            <p-button type="button" icon="pi pi-refresh" (click)="reset()" styleClass="p-button-text"></p-button>
+            <p-button type="button" icon="pi pi-chevron-right" (click)="next()" [disabled]="isLastPage()" styleClass="p-button-text"></p-button>
+        </div>
+        <p-table [value]="clientes" [paginator]="true" [rows]="rows" [showCurrentPageReport]="true" [(first)]="first" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [rowsPerPageOptions]="[10,25,50]">
             <ng-template pTemplate="header">
                 <tr>
-                    <th>ShareKey</th>
-                    <th>BusinessId</th>
-                    <th>Email</th>
-                    <th>Phone</th>
-                    <th>DateAdd</th>
-                    <th>Edit</th>
-                    <th>Delete</th>
+                    <th>Name</th>
+                    <th>Country</th>
+                    <th>Company</th>
+                    <th>Representative</th>
                 </tr>
             </ng-template>
-            <ng-template pTemplate="body" let-client>
+            <ng-template pTemplate="body" let-customer>
                 <tr>
-                    <td style="width: 10%; overflow-wrap: break-word; ">{{client.shareKey}}</td>
-                    <td style="width: 10%; overflow-wrap: break-word;">{{client.businessId}}</td>
-                    <td style="width: 20%; overflow-wrap: break-word;">{{client.email}}</td>
-                    <td style="width: 20%; overflow-wrap: break-word;">{{client.phone}}</td>
-                    <td style="width: 20%; overflow-wrap: break-word;">{{client.dateAdd | date:'YYYY / MM / dd'}}</td>
-                    <td><button class="btn btn-warning" (click)="loadForm(client.id)">Edit</button></td>
-                    <td><button class="btn btn-danger" (click)="confirm(client.id)">Delete</button></td>
-                </tr>
-            </ng-template>
-            <ng-template pTemplate="paginatorleft">
-                <p-button type="button" (click)="addClient()" icon="pi pi-plus" styleClass="p-button-text"></p-button>
-            </ng-template>
-            <!--<ng-template pTemplate="paginatorright">
-                <p-button type="button" icon="pi pi-cloud" styleClass="p-button-text"></p-button>
-            </ng-template>-->
-        </p-table>
-    </div>
-
-    <!--<div class="col-xs-12 col-md-12">
-        <p-table #tb [value]="clientes" exportFilename="listClients">
-            <ng-template pTemplate="header">
-                <tr>
-                    <th>ShareKey</th>
-                    <th>BusinessId</th>
-                    <th>Email</th>
-                    <th>Phone</th>
-                    <th>DateAdd</th>
-                    <th>Edit</th>
-                    <th>Delete</th>
-                </tr>
-            </ng-template>
-            <ng-template pTemplate="body" let-clientes>
-                <tr>
-                    <td style="width: 10%; overflow-wrap: break-word; ">{{clientes.shareKey}}</td>
-                    <td style="width: 10%; overflow-wrap: break-word;">{{clientes.businessId}}</td>
-                    <td style="width: 20%; overflow-wrap: break-word;">{{clientes.email}}</td>
-                    <td style="width: 20%; overflow-wrap: break-word;">{{clientes.phone}}</td>
-                    <td style="width: 20%; overflow-wrap: break-word;">{{clientes.dateAdd | date:'YYYY / MM / dd'}}</td>
-                    <td><button class="btn btn-warning" (click)="loadForm(clientes.id)">Edit</button></td>
-                    <td><button class="btn btn-danger" (click)="confirm(clientes.id)">Delete</button></td>
+                    <td>{{customer.name}}</td>
+                    <td>{{customer.country.name}}</td>
+                    <td>{{customer.company}}</td>
+                    <td>{{customer.representative.name}}</td>
                 </tr>
             </ng-template>
         </p-table>
     </div>-->
-
+    <div class="card">
+        <div class="col-xs-12 col-md-12">
+            <p-table #tb [value]="clientes" exportFilename="listClients">
+                <ng-template pTemplate="header">
+                    <tr>
+                        <th>ShareKey</th>
+                        <th>BusinessId</th>
+                        <th>Email</th>
+                        <th>Phone</th>
+                        <th>DateAdd</th>
+                        <th>Edit</th>
+                        <th>Delete</th>
+                    </tr>
+                </ng-template>
+                <ng-template pTemplate="body" let-clientes>
+                    <tr>
+                        <td style="width: 10%; overflow-wrap: break-word; ">{{clientes.shareKey}}</td>
+                        <td style="width: 10%; overflow-wrap: break-word;">{{clientes.businessId}}</td>
+                        <td style="width: 20%; overflow-wrap: break-word;">{{clientes.email}}</td>
+                        <td style="width: 20%; overflow-wrap: break-word;">{{clientes.phone}}</td>
+                        <td style="width: 20%; overflow-wrap: break-word;">{{clientes.dateAdd | date:'YYYY / MM / dd'}}</td>
+                        <td><button class="btn btn-warning" (click)="loadForm(clientes.id)">Edit</button></td>
+                        <td><button class="btn btn-danger" (click)="confirm(clientes.id)">Delete</button></td>
+                    </tr>
+                </ng-template>
+            </p-table>
+        </div>
+    </div>
 
     <p-dialog [(visible)]="display" [style]="{width: '25vw'}">
         <ng-template pTemplate="header">
