Tarea: Allianz Ajuste realizado: se agrega dos entidades, region y country, se crear servicio para consultar listas y consultar country por region, servicios back y front.

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -19,6 +19,7 @@
                     <a (click)="home()" class="links">Home</a>
                     <a (click)="cliente()" class="links">Client</a>
                     <a class="links" href="#">Provaider</a>
+                    <a (click)="country()" class="links">Country</a>
                 </div>
             </div>
         </div>
